--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <header>
-    <h1>Tyler's Notes</h1>
+    <h1>Libertarian Policy Generator</h1>
 </header>
 
 <div id="wrapper">
@@ -24,7 +24,7 @@
 </div>
 
 <footer>
-    <p>Libertarian Policy Generator</p>
+    <p>BYU Libertarians</p>
 </footer>
 
 </body>
