--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>{{ title }}</title>
     <meta name = "viewport" content = "width = device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 
 <body>
